--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
   english_words: ^4.0.0
   provider: ^6.0.0
+  intl: ^0.17.0  # check https://pub.dev/packages/intl for the latest version
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +25,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/book_texts/
